Use a raw pointer instead of Singleton for PnaclHost and leak it.

This CL was brought up by issue 631547 which highlights that PnaclHost is
sometimes deleted off-thread (on the main thread at static unitilization instead
of the IO thread it's bound to) with live WeakPtrs.

Issue 631547 results in random flakes for all browser_tests exercising this
code one way or another, it should be fixed by this.

The WeakPtrs served no purpose as the task running system is long gone by the time
static destruction kicks in and no task would thus ever have been cancelled through
them.

It already leaked its state on static destruction from AtExitManager.
It could instead have used base::LeakySingletonTraits but it really doesn't
need to even be a Singleton per being intended for single-threaded usage.

So this CL:
 - Replaces WeakPtrs usage with Unretained(this).
 - Adds missing thread_checker_ calls now that they will no longer be implicitly
   provided by GetWeakPtr() calls.
 - Replaces Singleton with a leaked static raw pointer.
 - Replace callback_forward.h include by callback.h (typedefs need it
   and were getting it transitively through singleton.h->at_exit.h).
 - The attempted un-initialization through DeInitIfSafe() remains the same.

BUG=631547

Review-Url: https://codereview.chromium.org/2207683002
Cr-Commit-Position: refs/heads/master@{#409365}