components/nacl/browser/pnacl_host_unittest.cc
@@ -42,7 +42,7 @@ class PnaclHostTest : public testing::Test {
         write_callback_count_(0),
         thread_bundle_(content::TestBrowserThreadBundle::IO_MAINLOOP) {}
   void SetUp() override {
-    host_ = new PnaclHost();
+    host_ = PnaclHost::GetInstance();
     ASSERT_TRUE(temp_dir_.CreateUniqueTempDir());
     host_->InitForTest(temp_dir_.path(), true);
     base::RunLoop().RunUntilIdle();
@@ -54,7 +54,6 @@ class PnaclHostTest : public testing::Test {
     host_->RendererClosing(0);
     content::RunAllBlockingPoolTasksUntilIdle();
     EXPECT_EQ(PnaclHost::CacheUninitialized, host_->cache_state_);
-    delete host_;
   }
   int GetCacheSize() { return host_->disk_cache_->Size(); }
   int CacheIsInitialized() {
@@ -442,7 +441,7 @@ TEST_F(PnaclHostTest, ClearTranslationCache) {
 class PnaclHostTestDisk : public PnaclHostTest {
  protected:
   void SetUp() override {
-    host_ = new PnaclHost();
+    host_ = PnaclHost::GetInstance();
     ASSERT_TRUE(temp_dir_.CreateUniqueTempDir());
     host_->InitForTest(temp_dir_.path(), false);
     EXPECT_EQ(PnaclHost::CacheInitializing, host_->cache_state_);
